Fix home scrollbar

--- a/server/public/stylesheets/style.less
+++ b/server/public/stylesheets/style.less
@@ -330,7 +330,7 @@ body.light {
 
   #home {
     padding: 20px;
-    overflow-y: visible;
+    overflow-y: scroll;
   }
 
   .discussion {
